--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <title>Test Project Javascript</title>
   </head>
   <body>
@@ -45,8 +45,7 @@
                   </li>
                 </ul>
                 <form class="d-flex">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
+                  <button class="btn btn-outline-warning" type="button" data-bs-toggle="modal" data-bs-target="#modalLogin">Masuk</button>
                 </form>
               </div>
             </div>
@@ -181,11 +180,53 @@
     </div>
 </div>
     <!-- Footer -->
-    <div class="container">
-        <div class="row bg-danger p-5 text-white">
-            Footer
+    <!-- <div class="container"> -->
+        <div class="row bg-dark p-3 text-white">
+          <div class="text-center">
+            <i class="bi-telephone-inbound">
+               08211234567
+            </i>
+          </div>
+          <div class="text-center">
+            <i class="bi-envelope">
+               tourtravel17@gmal.com
+            </i>
+          </div>
         </div>
-    </div>
+    <!-- </div> -->
+
+    <div class="modal" id="modalLogin" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="truth">
+      <div class="modal-dialog" role="document">
+          <div class="modal-content">
+              <!--code judul dan form-->
+              <div class="modal-header">
+                  <h5 class="modal-title">Login</h5>
+                  <button type="button" class="btn-close" data-dismiss="modal" aria-label="close"></button>
+              </div>
+              <div class="modal-body">
+                  <form>
+                      <div class="form-group">
+                          <label for="exampleInputEmail">Email</label>
+                          <input type="email" class="form-control" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter email">
+                      </div>
+                      <div class="form-group">
+                          <label for="exampleInputPassword">Password</label>
+                          <input type="password" class="form-control" id="exampleInputPassword" placeholder="Password">
+                      </div>
+                      <div class="form-group form-check">
+                          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                          <label class="form-check-label" for="exampleCheck1">Selalu Masuk</label>
+                      </div>
+                  </form>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-toggle="modal">Cancel</button>
+                <button type="button" class="btn btn-primary">Login</button>
+              </div>
+          </div>
+      </div>
+    </div>  
+
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
