--- a/Index.html
+++ b/Index.html
@@ -45,7 +45,7 @@
                   </li>
                 </ul>
                 <form class="d-flex">
-                  <button class="btn btn-outline-warning" type="button" data-bs-toggle="modal" data-bs-target="#modalLogin">Masuk</button>
+                  <button class="btn btn-outline-danger" type="button" data-bs-toggle="modal" data-bs-target="#modalLogin">Masuk</button>
                 </form>
               </div>
             </div>
